[package]
name = "cryptor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chacha20poly1305 = "0.11.0"
base64 = "0.22.1"
rand = "0.10.2"